# clipp

./: CMakeLists.txt
src/: main.cpp
src/math/: vector.cpp  vector.h
